--- a/labs/CART-Examples_Exercise.qmd
+++ b/labs/CART-Examples_Exercise.qmd
@@ -57,9 +57,19 @@ n <- nrow(mydataset)
 p <- ncol(mydataset)
 ```
 
-# Introductory example
+# Assignment of Orange Juice Dataset
 
-## The Orange Juice dataset
+## Data description
+***
+
+_In this section,  you should provide a short explanation about problem and the data set._
+
+***
+
+
+`r myDescription`. 
+
+The data set has **`r n`** observations on **`r p`** variables. The variable names are: *`r toString(names(mydataset))`*.
 
 The Orange Juice data set (`OJ`) is available in the `ISLR2` package.
 
@@ -86,6 +96,10 @@ The data contains 1070 purchases where the customer either purchased Citrus Hill
 
 A typical classification/prediction problem is to build a model that can distinguish and predict diabetes using some or all the variables in the dataset.
 
+```{r}
+summary(mydataset)
+```
+
 A quick exploration can be done with the `skimr` package:
 
 ```{r}
@@ -93,6 +107,49 @@ library(skimr)
 #data("OJ", package = "ISLR2")
 skim(mydataset)
 ```
+## a. Create a training set containing a random sample of 800 observations, and a test set containing the remaining observations.
+
+```{r}
+set.seed(123)
+ssize <- nrow(mydataset)
+propTrain <- (800/n) #0.8
+training.indices <-sample(1:ssize, floor(ssize*propTrain))
+train.data  <- mydataset[training.indices, ]
+test.data <- mydataset[-training.indices, ]
+```
+
+## b. Fit a tree to the training data, with Purchase as the response and the other variables as predictors. Use the summary () function to produce summary statistics about the tree, and describe the results obtained. What is the training error rate? How many terminal nodes does the tree have?
+```{r}
+library(rpart)
+model <- rpart(Purchase ~., data = train.data)
+summary(model)
+# par(xpd = NA) # otherwise on some devices the text is clipped
+```
+The results: 
+```{r}
+print(model)
+plot(model)
+text(model, digits = 3, cex=0.8)
+```
+```{r}
+library(rpart.plot)
+#detach(package:rpart.plot)
+rpart.plot(model, cex=.7)
+
+```
+## Prediction
+
+```{r}
+tree.pred = predict(model,test.data,type="class")
+res <- table(tree.pred,test.data$Purchase)
+res
+```
+```{r}
+accrcy <- sum(diag(res)/sum(res))
+accrcy
+```
+The accuracy is **`r accrcy`** or misclassification error rate is **`r 1-accrcy`**.
+
 
 ## Building a classification tree with `rpart``
 
@@ -133,7 +190,7 @@ If we believed the model was ready for use we could use it to predict diabetes f
 
 ```{r}
 predicted.classes<- predict(model1, OJ, "class")
-mean(predicted.classes == OJ$Purchase)
+mean(predicted.classes == mydataset$Purchase)
 ```
 
 A better strategy is to use train dataset to build the model and a test dataset to check how it works.
@@ -150,9 +207,9 @@ test.data <- mydataset[-training.indices, ]
 Now we build the model on the train data and check its accuracy on the test data.
 
 ```{r}
-model2 <- rpart(diabetes ~., data = train.data)
+model2 <- rpart(Purchase ~., data = train.data)
 predicted.classes.test<- predict(model2, test.data, "class")
-mean(predicted.classes.test == test.data$diabetes)
+mean(predicted.classes.test == test.data$Purchase)
 ```
 
 The accuracy is good, but smaller, as expected.
@@ -179,7 +236,8 @@ We start categorizing the variable `Sales` creating a new variable,  `High`, whi
 
 ```{r}
 # as.factor() changes the type of variable to factor
-mydataset$High=as.factor(ifelse(mydataset$Sales<=8,"No","Yes"))
+mydataset$Hig
+h=as.factor(ifelse(mydataset$Sales<=8,"No","Yes"))
 ```
 
 The number of observations for each class is:
